--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,8 +9,8 @@ buildscript {
         supportLibVersion = "28.0.0"
     }
     repositories {
-        google()
-        jcenter()
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.2")
@@ -33,7 +33,7 @@ allprojects {
             url("$rootDir/../node_modules/jsc-android/dist")
         }
         maven { url "https://jitpack.io" }
-        google()
-        jcenter()
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
     }
 }
