--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "android": "react-native run-android",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
@@ -22,14 +23,15 @@
     "react": "16.9.0",
     "react-native": "0.61.3",
     "react-native-autolink": "^1.4.0",
-    "react-native-gesture-handler": "^1.1.0",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-htmlview": "^0.14.0",
     "react-native-i18n": "^2.0.15",
     "react-native-image-crop-picker": "^0.25.0",
     "react-native-image-zoom-viewer": "^2.2.26",
-    "react-native-reanimated": "^1.1.0",
+    "react-native-reanimated": "^1.9.0",
     "react-native-root-toast": "^2.2.0",
     "react-native-router-flux": "^4.1.0-beta.5",
+    "react-native-screens": "^2.8.0",
     "react-native-scrollable-tab-view-fix-guo": "^0.99.0",
     "react-native-spinkit-fix-new": "git+https://github.com/CarSmallGuo/react-native-spinkit.git",
     "react-native-tab-view": "^2.0.9",
