--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ant-design/react-native": "^3.3.0",
     "@react-native-community/async-storage": "^1.2.4",
     "@react-native-community/netinfo": "^2.0.0",
     "@react-native-community/viewpager": "^1.1.7",
